--- a/src/jephy.cn/travel/web/app.html
+++ b/src/jephy.cn/travel/web/app.html
@@ -5,8 +5,8 @@
   {{ HEAD }}
 </head>
 <body {{ BODY_ATTRS }}>
-<div class="body">
+<!--<div class="body">-->
 {{ APP }}
-</div>
+<!--</div>-->
 </body>
 </html>
